<resources>
    <string name="app_name">BestOfTheBestTaxiApp</string>
   <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="service_not_available">No geocoder available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="address_found">Success Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="send">Send</string>
    <string name="login_name">Name</string>
    <string name="login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_reply_password">Reply password</string>
    <string name="login_button">Sign Up</string>
    <string name="login_client_lbl">Client</string>
    <string name="login_driver_lbl">Driver</string>
</resources>
