<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_login_container_padding"
    android:paddingRight="@dimen/activity_login_container_padding">
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_login_elements_interval"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/login_name"/>
    <EditText
        android:id="@+id/login"
        android:layout_below="@+id/name"
        android:layout_marginTop="@dimen/activity_login_elements_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/login"
        />
    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/activity_login_elements_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:hint="@string/login_email"
        />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_below="@id/email"
        android:layout_marginTop="@dimen/activity_login_elements_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        />
    <EditText
        android:id="@+id/reply_password"
        android:layout_below="@id/password"
        android:layout_marginTop="@dimen/activity_login_elements_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_reply_password"/>
    <RadioGroup
        android:id="@+id/account_type"
        android:layout_marginTop="@dimen/activity_login_elements_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reply_password"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_client_lbl"/>
        <RadioButton
            android:id="@+id/driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_driver_lbl"/>
        <RadioButton
            android:id="@+id/client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:layout_marginTop="@dimen/activity_login_elements_interval"
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_type"
        android:id="@+id/button" />
</RelativeLayout>